# GaussianProcess

./: CMakeLists.txt
include/GaussianProcess/: GaussianProcessModel.hpp
scripts/: visualizeGP.py
src/: GaussianProcessModel.cpp
test/: CMakeLists.txt  main.cpp
